[package]
name = "secp256k1-pure-rust"

version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>", "Mykola Sakhno <mykola.sakhno@bitfury.com>"]
edition = "2018"
license = "Apache 2.0"
repository = "https://github.com/LightningPeach/secp256k1-wrapper"
description = "Wrapper for secp256k1 to build WebAssembly (wasm32-unknown-unknown) binary"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
libsecp256k1= "0.2.2"
rand = { version ="0.6", features=["wasm-bindgen"] }
wasm-bindgen = "0.2.48"

[dev-dependencies]
wasm-bindgen-test = "0.2.48"
rand_core = "0.4"
