[package]
name = "secp256k1-pure-rust"

version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@bitfury.com>", "Mykola Sakhno <mykola.sakhno@bitfury.com>"]
edition = "2018"
license = "Apache 2.0"
repository = "https://github.com/LightningPeach/secp256k1-wrapper"
description = "Wrapper for secp256k1 to build WebAssembly (wasm32-unknown-unknown) binary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.6", features = ["wasm-bindgen"], optional = true }
libsecp256k1= { git = "https://github.com/LightningPeach/libsecp256k1-rs    " }
wasm-bindgen = "0.2.37"

[dev-dependencies]
wasm-bindgen-test = "0.2.37"
rand_core = "0.4"
